--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "prefer-stable": true,
     "require": {
         "laravel/horizon": "^5.21",
-        "nesbot/carbon": "^2.17",
+        "nesbot/carbon": "^2.17|^3.2",
         "illuminate/support": "^8.17|^9.0|^10.0|^11.0"
     }
 }
